Changed all margins to paddings

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         width: 960px !important;
       }
       .col-2 {
-        margin-top: 6em !important;
+        padding-top: 6em !important;
       }
     } */
     /* Tablet */
@@ -86,14 +86,14 @@
         text-align: center !important;
       }
       .col-2 {
-        margin-top: 0 !important;
-        margin-bottom: 1em !important;
+        padding-top: 0 !important;
+        padding-bottom: 1em !important;
       }
       .col-img {
         width: 240px !important;
       }
       .quantity {
-        margin-left: 4em !important;
+        padding-left: 4em !important;
       }
       .billing-info,
       .shipping-info {
@@ -101,7 +101,7 @@
         text-align: center !important;
       }
       .billing-info {
-        margin-bottom: 3em;
+        padding-bottom: 3em;
       }
       .billing-td,
       .shipping-td {
@@ -119,7 +119,7 @@
       }
       .left-col-footer-table {
         border-bottom: 2px solid #DADADA;
-        margin-bottom: 2em !important;
+        padding-bottom: 2em !important;
         padding-bottom: 1em !important;
       }
     }
@@ -161,7 +161,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-bottom: 3.5em; padding-top: 3.5em;">
+                      style="padding-bottom: 3.5em; padding-top: 3.5em;">
                       <tr>
                         <td align="center">
                           <a href="#"><img class="logo" style="width: 100px;" src="img/header-logo.png" alt="tens"></a>
@@ -183,7 +183,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-bottom: 2em;">
+                      style="padding-bottom: 2em;">
                       <tr>
                         <td align="center" style="padding-bottom: 2em;">
                           <h1 style="font-family: 'Noto Serif', serif; font-weight: 500; color: #4B4B4B;">Order Confirmation</h1>
@@ -191,14 +191,14 @@
                       </tr>
                       <tr>
                         <td align="center" style="padding-bottom: 2em;">
-                          <p style="font-weight: 300; margin-bottom: 1em;">Hey Smiles Davis,</p>
-                          <p style="font-weight: 300; margin-bottom: 1em;">We've got your order! Your world is about to look a whole lot better.</p>
+                          <p style="font-weight: 300; padding-bottom: 1em;">Hey Smiles Davis,</p>
+                          <p style="font-weight: 300; padding-bottom: 1em;">We've got your order! Your world is about to look a whole lot better.</p>
                           <p style="font-weight: 300;">We'll drop you another email when your order ships.</p>
                         </td>
                       </tr>
                       <tr>
                         <td align="center">
-                          <h2 style="font-size: 1.2em; font-weight: 600; color: #4B4B4B; text-transform: uppercase; letter-spacing: 0.05em; margin-bottom: .3em;">Order No. TensUSA-6500 </h2>
+                          <h2 style="font-size: 1.2em; font-weight: 600; color: #4B4B4B; text-transform: uppercase; letter-spacing: 0.05em; padding-bottom: .3em;">Order No. TensUSA-6500 </h2>
                           <p style="font-size: .9em; font-weight: 200;">24/06/2018</p>
                         </td>
                       </tr>
@@ -234,7 +234,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-bottom: 1em;">
+                      style="padding-bottom: 1em;">
                       <tr>
                         <td>
                           <h3 class="items-ordered" style="font-size: 1em; font-weight: 400; letter-spacing: 0.06em; color: #bdbdbd; text-transform: uppercase;">Items Ordered</h3>
@@ -290,7 +290,7 @@
                             role="presentation"
                             border="0"
                             align="right"
-                            style="margin-top: 3.5em;">
+                            style="padding-top: 3.5em;">
                             <tr>
                               <td>
                                 <table
@@ -303,7 +303,7 @@
                                   align="left">
                                   <tr>
                                     <td>
-                                      <p style="letter-spacing: 0.03em; margin-bottom: .5em;">Travel Case</p>
+                                      <p style="letter-spacing: 0.03em; padding-bottom: .5em;">Travel Case</p>
                                       <p style="letter-spacing: 0.03em; font-size: .8em; font-weight: 300;">Black</p>
                                     </td>
                                   </tr>
@@ -318,7 +318,7 @@
                                   align="right">
                                   <tr>
                                     <td align="right">
-                                      <p class="quantity" style="font-weight: 300; margin-left: 2em;">x 1</p>
+                                      <p class="quantity" style="font-weight: 300; padding-left: 2em;">x 1</p>
                                     </td>
                                     <td align="right">
                                       <p style="font-weight: 300;">$18.00</p>
@@ -381,7 +381,7 @@
                             role="presentation"
                             border="0"
                             align="right"
-                            style="margin-top: 3.25em;">
+                            style="padding-top: 3.25em;">
                             <tr>
                               <td>
                                 <table
@@ -394,7 +394,7 @@
                                   align="left">
                                   <tr>
                                     <td>
-                                      <p style="letter-spacing: 0.03em; margin-bottom: .5em;">Classic</p>
+                                      <p style="letter-spacing: 0.03em; padding-bottom: .5em;">Classic</p>
                                       <p style="letter-spacing: 0.03em; font-size: .8em; font-weight: 300;">Black</p>
                                     </td>
                                   </tr>
@@ -409,7 +409,7 @@
                                   align="right">
                                   <tr>
                                     <td align="right">
-                                      <p class="quantity" style="font-weight: 300; margin-left: 2em;">x 1</p>
+                                      <p class="quantity" style="font-weight: 300; padding-left: 2em;">x 1</p>
                                     </td>
                                     <td align="right">
                                       <p style="font-weight: 300;">$18.00</p>
@@ -445,7 +445,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-top: 1.5em; margin-bottom: 2em;">
+                      style="padding-top: 1.5em; padding-bottom: 2em;">
                       <tr>
                         <td>
                           <!--  Discount / Subtotal / Totall Column -->
@@ -526,7 +526,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-bottom: 1em;">
+                      style="padding-bottom: 1em;">
                       <tr>
                         <td>
                           <h3 class="items-ordered" style="font-size: 1em; font-weight: 400; letter-spacing: 0.06em; color: #bdbdbd; text-transform: uppercase;">Payment Info</h3>
@@ -548,7 +548,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-bottom: 3em;">
+                      style="padding-bottom: 3em;">
                       <tr>
                         <td>
                           <!-- 2 Column Table (1) -->
@@ -599,7 +599,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-bottom: 2em;">
+                      style="padding-bottom: 2em;">
                       <tr>
                         <td>
                           <!-- Billing Info Column -->
@@ -714,7 +714,7 @@
                       role="presentation"
                       border="0"
                       align="center"
-                      style="margin-top: 2.5em; margin-bottom: 4.5em;">
+                      style="padding-top: 2.5em; padding-bottom: 4.5em;">
                         <tr>
                           <td align="center">
                             <p style="font-weight: 300; letter-spacing: .03em;">If you need help with anything please don't hesitate to drop us an email: <a href="#" style="text-decoration: none; color: #edc287;">care@tens.co</a> :)</p>
@@ -751,7 +751,7 @@
                       align="center" 
                       cellspacing="0" 
                       cellpadding="0"
-                      style="padding-left: 2em; padding-right: 2em; margin-bottom: 2em;">
+                      style="padding-left: 2em; padding-right: 2em; padding-bottom: 2em;">
                         <!-- 3 Column Row -->
                         <tr>
                           <td class="nav-td" width="33.33%" align="left">
@@ -787,7 +787,7 @@
                       align="center" 
                       cellspacing="0" 
                       cellpadding="0"
-                      style="margin-top: 2em; margin-bottom: 2em;">
+                      style="padding-top: 2em; padding-bottom: 2em;">
                       <tr>
                         <!-- Left Column -->
                         <td>
@@ -866,7 +866,7 @@
                       align="center" 
                       cellspacing="0" 
                       cellpadding="0"
-                      style="margin-top: 1.5em; margin-bottom: 1.5em;">
+                      style="padding-top: 1.5em; padding-bottom: 1.5em;">
                       <tr>
                         <td align="center">
                           <a style="text-decoration: none; font-weight: 300; color: #edc287;" href="#">us.tens.co</a>
